// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normal 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": undefined,
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "menu.login",
        "parentKeys": Array [
          "/",
          "/user",
        ],
        "path": "/user/login",
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "parentKeys": Array [
      "/",
    ],
    "path": "/user",
    "routes": null,
  },
  Object {
    "children": undefined,
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "parentKeys": Array [
      "/",
    ],
    "path": "/welcome",
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "children": undefined,
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  Object {
    "children": undefined,
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list",
    "routes": null,
  },
]
`;

exports[`normal 2`] = `
Map {
  "/user/login" => Object {
    "component": "./user/login",
    "key": "/user/login",
    "layout": false,
    "locale": "menu.login",
    "name": "menu.login",
    "parentKeys": Array [
      "/",
      "/user",
    ],
    "path": "/user/login",
    "routes": null,
  },
  "/user" => Object {
    "children": Array [
      Object {
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "menu.login",
        "parentKeys": Array [
          "/",
          "/user",
        ],
        "path": "/user/login",
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "parentKeys": Array [
      "/",
    ],
    "path": "/user",
    "routes": null,
  },
  "/welcome" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "parentKeys": Array [
      "/",
    ],
    "path": "/welcome",
    "routes": null,
  },
  "/admin" => Object {
    "access": "canAdmin",
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  "/list" => Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list",
    "routes": null,
  },
}
`;

exports[`normal ignoreFilter 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "menu.login",
        "parentKeys": Array [
          "/",
          "/user",
        ],
        "path": "/user/login",
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "parentKeys": Array [
      "/",
    ],
    "path": "/user",
    "routes": null,
  },
  Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "parentKeys": Array [
      "/",
    ],
    "path": "/welcome",
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list",
    "routes": null,
  },
]
`;

exports[`normal ignoreFilter 2`] = `
Map {
  "/user/login" => Object {
    "component": "./user/login",
    "key": "/user/login",
    "layout": false,
    "locale": "menu.login",
    "name": "menu.login",
    "parentKeys": Array [
      "/",
      "/user",
    ],
    "path": "/user/login",
    "routes": null,
  },
  "/user" => Object {
    "children": Array [
      Object {
        "component": "./user/login",
        "key": "/user/login",
        "layout": false,
        "locale": "menu.login",
        "name": "menu.login",
        "parentKeys": Array [
          "/",
          "/user",
        ],
        "path": "/user/login",
        "routes": null,
      },
    ],
    "key": "/user",
    "layout": false,
    "locale": false,
    "parentKeys": Array [
      "/",
    ],
    "path": "/user",
    "routes": null,
  },
  "/welcome" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "parentKeys": Array [
      "/",
    ],
    "path": "/welcome",
    "routes": null,
  },
  "/admin" => Object {
    "access": "canAdmin",
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "menu": Object {
      "hideChildren": true,
    },
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  "/list" => Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list",
    "routes": null,
  },
}
`;
